--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">TestAuthGraph</string>
-    <string name="sign_in">Sign in</string>
-    <string name="sign_out">SIGN OUT</string>
+    <string name="app_name">Scalian</string>
+    <string name="login_now">Login</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
+    <string name="logo">logo</string>
+    <string name="background_gradient">background gradient</string>
+    <string name="background_photo">background photo</string>
 </resources>
